kube.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "react-ui"
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: "react-ui"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-ui
  labels:
    app: react-ui
spec:
  replicas: 1
  selector:
      matchLabels:
        app: react-ui
  template:
    metadata:
      labels:
        app: react-ui
    spec:
      containers:
        - name: "ui"
          image: "1645370/ms:ui"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
