ingress.yaml
#ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: insample
spec:
  rules:
    - host: example.foo-10.com
      http:
        paths:
          - backend: # How the ingress will handle the requests
              service:
               name: react-ui # Which service the request will be forwarded to
               port:
                 name: http # Which port in that service
            path: / # Which path is this rule referring to
            pathType: Prefix # See more at https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
